# ComparePicture

./: CMakeLists.txt  CompareImages.cpp  CompareImages.h  CompareMats.cpp  CompareMats.h  README.md  main.cpp  tools.cpp  tools.h  排序命令
old/: CompareMats.cpp
run/原图/: src.txt
run/图片组1/: src.txt
run/图片组2/: src.txt
